# Atlas

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
atlas/: __init__.py  config.py
atlas/core/: audio_gate.py  health.py  mcp_client.py  models.py  orchestrator.py  session.py  speaker_id.py  stt.py  tts.py  wake_word.py
atlas/db/: user_db.py
atlas/tools/: _location.py  datetime_info.py  geoposition.py  inbox.py  memory.py  metrics.py  weather.py  wikipedia.py
docs/wiki/: 01-internal-architecture.md  02-contributor-guide.md  03-user-manual.md
models/: Atlas.onnx
scripts/: download_models.py  edit_user.py  embed_deep.py  embed_memory.py  index_sessions.py  register_user.py  unify_topics.py
tests/unit/: test_config.py  test_health.py  test_models.py  test_session.py  test_stt.py
