[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas"
version = "1.0.0"
description = "Atlas — local-first, modular AI voice assistant"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.10"
keywords = ["ai", "voice-assistant", "local", "offline", "llm", "mcp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "anyio>=4.0",
    "ollama>=0.6.2",
    "mcp>=1.27.1",
    "livekit-wakeword[listener]>=0.2.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.12",
    "numpy>=1.24",
    "psutil>=7.0",
    "python-dotenv>=1.2.2",
    "speechbrain>=1.0",
    "pyobjc-framework-CoreLocation>=10.0",
    "reverse_geocoder>=1.5",
    "httpx>=0.27",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.scripts]
atlas            = "atlas.core.orchestrator:main"
atlas-geo        = "atlas.tools.geoposition:main"
atlas-weather    = "atlas.tools.weather:main"
atlas-metrics    = "atlas.tools.metrics:main"

[project.urls]
Homepage    = "https://github.com/CestMoiRoma/Atlas"
Repository  = "https://github.com/CestMoiRoma/Atlas"
Issues      = "https://github.com/CestMoiRoma/Atlas/issues"

[tool.hatch.build.targets.wheel]
packages = ["atlas"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.ruff]
target-version = "py310"
line-length    = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]
